--- a/pages/terms.html
+++ b/pages/terms.html
@@ -12,7 +12,7 @@
 <body>
     <header class="fixed-header">
         <div class="header-content">
-            <div class="logo"><a href="../index.html">Paylic</a></div>
+            <div class="logo"><a href="/index.html">Paylic</a></div>
             <nav>
                 <a href="/index.html">Home</a>
                 <a href="pages/about.html">About Us</a>
