--- a/tools/sip.html
+++ b/tools/sip.html
@@ -14,7 +14,7 @@
     <header class="fixed-header">
         <div class="header-content">
            <div class="logo">
-            <a href="index.html">Paylic</a>
+            <a href="/index.html">Paylic</a>
         </div>
             <nav>
                 <a href="index.html">Home</a>
