--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="/index.html">Home</a>
                 <a href="pages/about.html">About Us</a>
-                <a href="pages/contact.html">Contact</a>
+                <a href="/contact.html">Contact</a>
             </nav>
         </div>
     </header>
