--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <header class="fixed-header">
         <div class="header-content">
-           <div class="logo">
-            <a href="/index.html">Paylic</a>
-        </div>
+            <div class="logo">
+                <a href="index.html">Paylic</a>
+            </div>
             <nav>
-                <a href="/index.html">Home</a>
-                <a href="pages/about.html">About Us</a>
-                <a href="pages/contact.html">Contact</a>
+                <a href="index.html">Home</a>
+                <a href="./pages/about.html">About Us</a>
+                <a href="./pages/contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -28,21 +28,21 @@
             <div class="hero-content">
                 <h1>Unlock Your Financial Potential</h1>
                 <p>Powerful tools to manage your finances with ease.</p>
-                <a href="tools/loan.html" class="cta-button">Get Started</a>
+                <a href="./tools/loan.html" class="cta-button">Get Started</a>
             </div>
         </section>
         <section id="get-started" class="get-started">
             <h2>Start Your Financial Journey Today</h2>
             <p>We provide powerful tools to help you take control of your finances. Explore our calculators and resources to plan your budget, investments, and more.</p>
             <div class="tool-links">
-                <a href="tools/loan.html" class="tool-button"><i class="fas fa-calculator"></i> EMI (Loan) Calculator</a>
-                <a href="tools/investment.html" class="tool-button"><i class="fas fa-chart-line"></i> Investment Calculator</a>
-                <a href="tools/budget.html" class="tool-button"><i class="fas fa-wallet"></i> Budget Planner</a>
-                <a href="tools/currency.html" class="tool-button"><i class="fas fa-exchange-alt"></i> Currency Converter</a>
-                <a href="tools/compound.html" class="tool-button"><i class="fas fa-chart-area"></i> Compound Interest Calculator</a>
-                <a href="tools/sip.html" class="tool-button"><i class="fas fa-chart-pie"></i> SIP (Mutual Fund) Calculator</a>
-                <a href="tools/fdrd.html" class="tool-button"><i class="fas fa-columns"></i> FD vs. RD Calculator</a>
-                <a href="tools/retirement.html" class="tool-button"><i class="fas fa-home"></i> Retirement Planner</a>
+                <a href="./tools/loan.html" class="tool-button"><i class="fas fa-calculator"></i> EMI (Loan) Calculator</a>
+                <a href="./tools/investment.html" class="tool-button"><i class="fas fa-chart-line"></i> Investment Calculator</a>
+                <a href="./tools/budget.html" class="tool-button"><i class="fas fa-wallet"></i> Budget Planner</a>
+                <a href="./tools/currency.html" class="tool-button"><i class="fas fa-exchange-alt"></i> Currency Converter</a>
+                <a href="./tools/compound.html" class="tool-button"><i class="fas fa-chart-area"></i> Compound Interest Calculator</a>
+                <a href="./tools/sip.html" class="tool-button"><i class="fas fa-chart-pie"></i> SIP (Mutual Fund) Calculator</a>
+                <a href="./tools/fdrd.html" class="tool-button"><i class="fas fa-columns"></i> FD vs. RD Calculator</a>
+                <a href="./tools/retirement.html" class="tool-button"><i class="fas fa-home"></i> Retirement Planner</a>
             </div>
         </section>
         <section class="why-use">
@@ -60,7 +60,7 @@
             <article>
                 <h3>5 Tips for Effective Budgeting</h3>
                 <p>Learn how to create a budget that works for you and achieve your financial goals.</p>
-                <a href="/blog/budget-tips.html" class="read-more">Read More</a>
+                <a href="../blog/budget-tips.html" class="read-more">Read More</a>
             </article>
             <div class="quick-tips">
                 <h4>Quick Tips</h4>
@@ -74,12 +74,10 @@
     </main>
     <footer>
         <nav>
-            <a href="pages/privacy.html">Privacy Policy</a>
-            <a href="pages/terms.html">Terms of Service</a>
+            <a href="./pages/privacy.html">Privacy Policy</a>
+            <a href="./pages/terms.html">Terms of Service</a>
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
-
-    
 </body>
 </html>
