--- a/tools/retirement.html
+++ b/tools/retirement.html
@@ -14,12 +14,12 @@
     <header class="fixed-header">
         <div class="header-content">
             <div class="logo">
-            <a href="index.html">Paylic</a>
-        </div>
+                <a href="../index.html">Paylic</a>
+            </div>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="pages/about.html">About Us</a>
-                <a href="pages/contact.html">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="../pages/about.html">About Us</a>
+                <a href="../pages/contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -27,7 +27,7 @@
         <section class="tool-content">
             <h2>Retirement Planner</h2>
             <div class="calculator">
-                             <label for="currentAge">Current Age:</label>
+                <label for="currentAge">Current Age:</label>
                 <input type="number" id="currentAge" value="30" min="18" max="70" step="1">
                 <input type="range" id="currentAgeSlider" min="18" max="70" step="1" value="30">
 
@@ -42,42 +42,45 @@
                 <label for="returnRate">Expected Annual Return Rate (%):</label>
                 <input type="number" id="returnRate" value="5" min="0" max="20" step="0.1">
                 <input type="range" id="returnRateSlider" min="0" max="20" step="0.1" value="5">
+
                 <label for="currency">Currency:</label>
                 <select id="currency">
                     <option value="USD">USD</option>
                     <option value="EUR">EUR</option>
                     <option value="GBP">GBP</option>
                     <option value="INR">INR</option>
-                    </select>
-                <button id="calculateRetirement">Calculate</button>
-                <button id="resetRetirement">Reset</button>
+                </select>
+                <div class="button-group">
+                    <button id="calculateRetirement" class="tool-button">Calculate</button>
+                    <button id="resetRetirement" class="tool-button">Reset</button>
+                </div>
                 <div id="retirementResult"></div>
                 <canvas id="myChart"></canvas>
                 <div class="tool-explanation">
-    <h3>Secure Your Future with the Retirement Calculator</h3>
-    <p>
-        The Retirement Calculator is a vital tool designed to help you plan for a comfortable and financially secure retirement. It allows you to estimate your savings at retirement based on your current age, retirement age, current savings, monthly contributions, and expected annual returns.
-    </p>
-    <p>
-        The Retirement Calculator uses a compound interest formula, similar to the one used for investments:
-        <strong>FV = PV (1 + r)^n + PMT * [((1 + r)^n - 1) / r]</strong>
-        Where:
-        FV = Future Value of retirement savings
-        PV = Present Value (current savings)
-        r = Annual rate of return (decimal)
-        n = Years to retirement
-        PMT = Annual Contribution (monthly contribution * 12)
-    </p>
-    <p>
-        This tool is essential for anyone looking to plan their retirement. It helps you understand how your savings can grow over time and whether you're on track to meet your retirement goals. By exploring different scenarios, you can make informed decisions about your savings and investment strategies.
-    </p>
-    <p>
-        The benefits of using the Retirement Calculator are numerous. It helps you visualize your retirement savings growth, empowering you to make strategic decisions about your financial future. It also helps you appreciate the importance of starting early and saving consistently.
-    </p>
-    <p>
-        To use the Retirement Calculator effectively, start by entering your current age and planned retirement age. Then, input your current savings, monthly contributions, and expected annual return (as a percentage). The calculator will then display your estimated savings at retirement. Analyze the results to understand how different factors affect your retirement savings. Experiment with various scenarios to find the optimal savings strategy for your financial goals. With consistent use, the Retirement Calculator can become an indispensable tool in your retirement planning.
-    </p>
-</div>
+                    <h3>Secure Your Future with the Retirement Calculator</h3>
+                    <p>
+                        The Retirement Calculator is a vital tool designed to help you plan for a comfortable and financially secure retirement. It allows you to estimate your savings at retirement based on your current age, retirement age, current savings, monthly contributions, and expected annual returns.
+                    </p>
+                    <p>
+                        The Retirement Calculator uses a compound interest formula, similar to the one used for investments:
+                        <strong>FV = PV (1 + r)^n + PMT * [((1 + r)^n - 1) / r]</strong>
+                        Where:
+                        FV = Future Value of retirement savings
+                        PV = Present Value (current savings)
+                        r = Annual rate of return (decimal)
+                        n = Years to retirement
+                        PMT = Annual Contribution (monthly contribution * 12)
+                    </p>
+                    <p>
+                        This tool is essential for anyone looking to plan their retirement. It helps you understand how your savings can grow over time and whether you're on track to meet your retirement goals. By exploring different scenarios, you can make informed decisions about your savings and investment strategies.
+                    </p>
+                    <p>
+                        The benefits of using the Retirement Calculator are numerous. It helps you visualize your retirement savings growth, empowering you to make strategic decisions about your financial future. It also helps you appreciate the importance of starting early and saving consistently.
+                    </p>
+                    <p>
+                        To use the Retirement Calculator effectively, start by entering your current age and planned retirement age. Then, input your current savings, monthly contributions, and expected annual return (as a percentage). The calculator will then display your estimated savings at retirement. Analyze the results to understand how different factors affect your retirement savings. Experiment with various scenarios to find the optimal savings strategy for your financial goals. With consistent use, the Retirement Calculator can become an indispensable tool in your retirement planning.
+                    </p>
+                </div>
             </div>
         </section>
     </main>
