--- a/tools/investment.html
+++ b/tools/investment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Investment Calculator - Paylic</title>
+    <title>Retirement Planner - Paylic</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,70 +14,73 @@
     <header class="fixed-header">
         <div class="header-content">
             <div class="logo">
-            <a href="index.html">Paylic</a>
-        </div>
+                <a href="../index.html">Paylic</a>
+            </div>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="pages/about.html">About Us</a>
-                <a href="pages/contact.html">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="../pages/about.html">About Us</a>
+                <a href="../pages/contact.html">Contact</a>
             </nav>
         </div>
     </header>
     <main>
         <section class="tool-content">
-            <h2>Investment Calculator</h2>
+            <h2>Retirement Planner</h2>
             <div class="calculator">
-                <label for="initialInvestment">Initial Investment:</label>
-                <input type="number" id="initialInvestment" value="1000" min="0" max="1000000" step="100">
-                <input type="range" id="initialInvestmentSlider" min="0" max="1000000" step="100" value="1000">
+                <label for="currentAge">Current Age:</label>
+                <input type="number" id="currentAge" value="30" min="18" max="70" step="1">
+                <input type="range" id="currentAgeSlider" min="18" max="70" step="1" value="30">
 
-                <label for="annualContribution">Annual Contribution:</label>
-                <input type="number" id="annualContribution" value="1000" min="0" max="100000" step="100">
-                <input type="range" id="annualContributionSlider" min="0" max="100000" step="100" value="1000">
+                <label for="retirementAge">Retirement Age:</label>
+                <input type="number" id="retirementAge" value="65" min="50" max="75" step="1">
+                <input type="range" id="retirementAgeSlider" min="50" max="75" step="1" value="65">
 
-                <label for="growthRate">Annual Growth Rate (%):</label>
-                <input type="number" id="growthRate" value="5" min="0" max="20" step="0.1">
-                <input type="range" id="growthRateSlider" min="0" max="20" step="0.1" value="5">
+                <label for="monthlyExpenses">Monthly Expenses in Retirement:</label>
+                <input type="number" id="monthlyExpenses" value="2000" min="0" max="100000" step="100">
+                <input type="range" id="monthlyExpensesSlider" min="0" max="100000" step="100" value="2000">
 
-                <label for="investmentYears">Investment Years:</label>
-                <input type="number" id="investmentYears" value="5" min="1" max="30" step="1">
-                <input type="range" id="investmentYearsSlider" min="1" max="30" step="1" value="5">
+                <label for="returnRate">Expected Annual Return Rate (%):</label>
+                <input type="number" id="returnRate" value="5" min="0" max="20" step="0.1">
+                <input type="range" id="returnRateSlider" min="0" max="20" step="0.1" value="5">
+
                 <label for="currency">Currency:</label>
                 <select id="currency">
                     <option value="USD">USD</option>
                     <option value="EUR">EUR</option>
                     <option value="GBP">GBP</option>
                     <option value="INR">INR</option>
-                    </select>
-                <button id="calculateInvestment">Calculate</button>
-                <button id="resetInvestment">Reset</button>
-                <div id="investmentResult"></div>
+                </select>
+                <div class="button-group">
+                    <button id="calculateRetirement" class="tool-button">Calculate</button>
+                    <button id="resetRetirement" class="tool-button">Reset</button>
+                </div>
+                <div id="retirementResult"></div>
                 <canvas id="myChart"></canvas>
                 <div class="tool-explanation">
-    <h3>Plan Your Financial Future with the Investment Calculator</h3>
-    <p>
-        The Investment Calculator is a powerful tool designed to help you project the future value of your investments. Whether you're planning for retirement, your children's education, or simply growing your wealth, this calculator allows you to estimate your investment's growth based on your initial investment, annual contributions, expected rate of return, and investment period.
-    </p>
-    <p>
-        The Investment Calculator uses a compound interest formula, similar to the one used for compound interest calculations:
-        <strong>FV = PV (1 + r)^n + PMT * [((1 + r)^n - 1) / r]</strong>
-        Where:
-        FV = Future Value of the investment
-        PV = Present Value (initial investment)
-        r = Annual rate of return (decimal)
-        n = Number of years
-        PMT = Annual Contribution
-    </p>
-    <p>
-        This tool is invaluable for anyone looking to understand the potential growth of their investments. It allows you to explore different investment scenarios and see how factors like annual returns and investment periods can impact your future wealth. By understanding these dynamics, you can make informed decisions about your investment strategy and set realistic financial goals.
-    </p>
-    <p>
-        The benefits of using the Investment Calculator are numerous. It helps you visualize the potential growth of your investments, empowering you to make strategic decisions about your portfolio. It also helps you appreciate the importance of starting early and investing consistently, as time is a crucial factor in investment growth.
-    </p>
-    <p>
-        To use the Investment Calculator effectively, begin by entering your initial investment amount. Then, input your annual contribution, expected annual rate of return (as a percentage), and investment period in years. The calculator will then display the future value of your investment and the total earnings. Analyze the results to understand how different factors affect your returns. Experiment with various scenarios to find the optimal investment strategy for your financial goals. With consistent use, the Investment Calculator can become an indispensable tool in your financial planning toolkit.
-    </p>
-</div>
+                    <h3>Secure Your Future with the Retirement Calculator</h3>
+                    <p>
+                        The Retirement Calculator is a vital tool designed to help you plan for a comfortable and financially secure retirement. It allows you to estimate your savings at retirement based on your current age, retirement age, current savings, monthly contributions, and expected annual returns.
+                    </p>
+                    <p>
+                        The Retirement Calculator uses a compound interest formula, similar to the one used for investments:
+                        <strong>FV = PV (1 + r)^n + PMT * [((1 + r)^n - 1) / r]</strong>
+                        Where:
+                        FV = Future Value of retirement savings
+                        PV = Present Value (current savings)
+                        r = Annual rate of return (decimal)
+                        n = Years to retirement
+                        PMT = Annual Contribution (monthly contribution * 12)
+                    </p>
+                    <p>
+                        This tool is essential for anyone looking to plan their retirement. It helps you understand how your savings can grow over time and whether you're on track to meet your retirement goals. By exploring different scenarios, you can make informed decisions about your savings and investment strategies.
+                    </p>
+                    <p>
+                        The benefits of using the Retirement Calculator are numerous. It helps you visualize your retirement savings growth, empowering you to make strategic decisions about your financial future. It also helps you appreciate the importance of starting early and saving consistently.
+                    </p>
+                    <p>
+                        To use the Retirement Calculator effectively, start by entering your current age and planned retirement age. Then, input your current savings, monthly contributions, and expected annual return (as a percentage). The calculator will then display your estimated savings at retirement. Analyze the results to understand how different factors affect your retirement savings. Experiment with various scenarios to find the optimal savings strategy for your financial goals. With consistent use, the Retirement Calculator can become an indispensable tool in your retirement planning.
+                    </p>
+                </div>
             </div>
         </section>
     </main>
@@ -88,6 +91,6 @@
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
-    <script src="investment.js"></script>
+    <script src="retirement.js"></script>
 </body>
 </html>
